--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "antd": "^4.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-transition-group": "^4.4.1",
     "typescript": "^3.7.5"
   },
